--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,12 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 } 
+
+
+
+
+/*nav style*/
+
 nav{
   display: flex;
   height: 80px;
@@ -26,8 +32,6 @@ nav .logo img{
 
 
 
-
-
 nav ul{
   display: flex;
   flex-wrap: wrap;
@@ -41,6 +45,7 @@ nav ul li a{
   text-decoration: none;
   font-size: 18px;
   font-weight: 500;
+  text-transform: uppercase;
   padding: 8px 15px;
   border-radius: 5px;
   letter-spacing: 1px;
@@ -62,55 +67,7 @@ input[type="checkbox"]{
   display: none;
 }
 
-/*Media query to make the navbar responsive on tablet and mobile device without js only css*/
 
-@media (max-width: 1000px){
-  nav{
-    padding: 0 40px 0 50px;
-  }
-}
-@media (max-width: 920px) {
-  nav .menu-btn i{
-    display: block;
-  }
-  #click:checked ~ .menu-btn i:before{
-    content: "\f00d";
-  }
-  nav ul{
-    position: fixed;
-    top: 80px;
-    left: -100%;
-    background: #fff;
-    height: 100vh;
-    width: 100%;
-    text-align: center;
-    display: block;
-    transition: all 0.3s ease;
-  }
-  #click:checked ~ ul{
-    left: 0;
-  }
-  nav ul li{
-    width: 100%;
-    margin: 40px 0;
-  }
-  nav ul li a{
-    width: 100%;
-    margin-left: -100%;
-    display: block;
-    font-size: 20px;
-    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
-  #click:checked ~ ul li a{
-    margin-left: 0px;
-  }
-  nav ul li a.active,
-  nav ul li a:hover{
-    background: none;
-    color: cyan;
-  }
-}
-/*Media query to make the navbar responsive on tablet and mobile device without js only css ends here.*/
 
 
 
@@ -290,16 +247,21 @@ section.hero-board {
 }
 
 
+  
 
 .mountain-icon{
   background-color: #0077FF;
   width: 15%;
+  height: 10vh;
   padding: 10px;
   border-radius: 50%;
   position: relative;
   top: -170px;
   right: 500px;
 }
+
+
+
 
 .left-cont{
   display: flex;
@@ -474,10 +436,67 @@ h3{
 
 
 
+/*Media query to make the navbar responsive on tablet and mobile device without js only css*/
+
+@media (max-width: 1000px){
+  nav{
+    padding: 0 40px 0 50px;
+  }
+}
+@media (max-width: 920px) {
+  nav .menu-btn i{
+    display: block;
+  }
+  #click:checked ~ .menu-btn i:before{
+    content: "\f00d";
+  }
+  nav ul{
+    position: fixed;
+    top: 80px;
+    left: -100%;
+    background: #fff;
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+    display: block;
+    transition: all 0.3s ease;
+  }
+  #click:checked ~ ul{
+    left: 0;
+  }
+  nav ul li{
+    width: 100%;
+    margin: 40px 0;
+  }
+  nav ul li a{
+    width: 100%;
+    margin-left: -100%;
+    display: block;
+    font-size: 20px;
+    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  #click:checked ~ ul li a{
+    margin-left: 0px;
+  }
+  nav ul li a.active,
+  nav ul li a:hover{
+    background: none;
+    color: cyan;
+  }
+}
+/*Media query to make the navbar responsive on tablet and mobile device without js only css ends here.*/
 
 
 
 
+
+
+
+
+
+
+
+/*Media query to make the website responsive on tablet and mobile device only css .*/
 
 @media (max-width: 768px) {
   .board-text2{
@@ -506,68 +525,65 @@ h3{
   
 
   .image-card-container {
-    flex-direction: column; /* Stack image cards vertically */
-    align-items: center; /* Center align the image cards */
+    flex-direction: column; 
+    align-items: center; 
   }
 
   .image-card {
-    width: 100%; /* Full width for image cards */
-    max-width: none; /* Reset max-width */
-    margin-bottom: 20px; /* Add margin for spacing between image cards */
+    width: 100%; 
+    max-width: none; 
+    margin-bottom: 20px; 
     height: 300px;
   }
 
   .image-card-caption {
-    text-align: start; /* Center text on mobile and tablet devices */
-    margin-top: 50%; /* Adjust margin for spacing */
+    text-align: start; 
+    margin-top: 50%; 
   }
   
-  
-  
-
-
-
 
 
 
   /* Reset styles for mobile and tablet devices */
   .container-new-section {
-    flex-direction: column; /* Stack items vertically */
-    align-items: center; /* Center items vertically */
+    flex-direction: column; 
+    align-items: center; 
   }
 
   .right-image {
-    width: 100%; /* Adjust image width to fit screen */
-    max-width: none; /* Reset max-width for the image */
+    width: 100%; 
+    max-width: none; 
     margin-top: 50px;
   }
 
   .mountain-icon{
-    background-color: #0077FF;
+    background-color: #007BFF;
     width: 15%;
+    height: 10vh;
     padding: 10px;
-    border-radius: 50%;
-    position: absolute;
-    
+    border-radius: 50% ;
+    position: relative;
+    top: -120px;
+    right: 140px;
   }
 
   .left-cont-text {
-    text-align: start; /* Center text in mobile and tablet devices */
+    text-align: start; 
   }
 
   .buttonLink {
-    flex-basis: 100%; /* Full width for buttons in mobile and tablet */
+    flex-basis: 100%; 
     margin-bottom: 20px;
   }
 
   .wrapper {
-    height: 50vh; /* Adjust the wrapper height for content */
+    height: 50vh; 
   }
 
 
   .wraper-content {
-    flex-direction: column; /* Stack content vertically */
-    align-items: center; /* Center content horizontally */
+    flex-direction: column; 
+    align-items: center; 
   }
 
   .wrapper-for-email{
@@ -575,38 +591,34 @@ h3{
   }
 
   form {
-    width: 100%; /* Full width for the form container */
-     /* Change to block-level element to take full width */
-    
+    width: 100%; 
   }
 
   form input {
-    width: 100%; /* Full width for form input */
-    max-width: none; /* Reset max-width */
+    width: 100%; 
+    max-width: none; 
     border-radius: 10px 0px 0px 10px;
-     /* Adjust border-radius to match the design */
-    margin-bottom: 10px; /* Add margin for spacing between input and button */
+    
+    margin-bottom: 10px; 
   }
 
   form button {
-     /* Full width for the button */
-    max-width: none; /* Reset max-width */
-  /* Adjust border-radius to match the design */
+    max-width: none; 
     border-radius: 0px 10px 10px 0px;
   }
 
   .socials {
     display: flex;
-    flex-direction: column; /* Align social icons horizontally */
+    flex-direction: column; 
     align-items: center;
-    justify-content: center; /* Center social icons horizontally */
-    left: 0; /* Reset left position */
+    justify-content: center;
+    left: 0; 
   }
 
   i,
   #socials-icon {
     padding: 10px;
-    margin-top: 0; /* Remove margin top */
+    margin-top: 0;
   }
 
   .socials-icon {
@@ -614,15 +626,15 @@ h3{
   }
 
   .follow-us {
-    text-align: center; /* Center text in mobile and tablet devices */
+    text-align: center; 
   }
 
 
 
   footer {
-    width: 100%; /* Full width for the footer */
-    height: auto; /* Adjust the height for content */
-    flex-direction: column; /* Stack items vertically */
+    width: 100%; 
+    height: auto; 
+    flex-direction: column; 
   }
 
   .copyright {
@@ -634,84 +646,11 @@ h3{
   .footer-logo,
   .copyright,
   .footer-text {
-    display: flex; /* Change to block-level elements for stacking */
-    margin: 0px auto; /* Center align each element */
-    text-align: center; /* Center the text */
+    display: flex; 
+    margin: 0px auto; 
+    text-align: center; 
   }
 }
 
 
-/*.wrapper .btn-1{
-  position: absolute;
-  height: 100%;
-  width: 50%;
-  color: #664AFF;
-  background: #fff;
-  line-height: 60px;
-  font-size: 27px;
-  font-weight: 500;
-  border-radius: 5px;
-  user-select: none;
-  cursor: pointer;
-  box-shadow: 5px 5px 30px rgba(0,0,0,.2);
-  transition: 0.4s cubic-bezier(0.68,-0.55,0.265,1.55);
-}
-.wrapper .btn-1:active{
-  transform: scale(0.9);
-}
-#click:checked ~ .btn-1{
-  height: 40px;
-  width: 100px;
-  opacity: 0;
-  pointer-events: none;
-}
-.wrapper .field{
-  height: 100%;
-  width: 0%;
-  opacity: 0;
-  pointer-events: none;
-  position: relative;
-  transition: 0.4s cubic-bezier(0.68,-0.55,0.265,1.55);
-}
-#click:checked ~ .field{
-  width: 100%;
-  opacity: 1;
-  pointer-events: auto;
-}
-.wrapper .field input{
-  height: 100%;
-  width: 100%;
-  border: 2px solid #fff;
-  border-radius: 5px;
-  padding: 0 130px 0 15px;
-  font-size: 20px;
-  outline: none;
-  box-shadow: 5px 5px 30px rgba(0,0,0,.2);
-}
-.wrapper .field input::placeholder{
-  color: #999;
-  font-size: 18px;
-}
-.wrapper .field .btn-2{
-  position: absolute;
-  top: 50%;
-  right: 15px;
-  transform: translateY(-50%);
-  font-size: 16px;
-  color: #fff;
-  line-height: 40px;
-  background: #664AFF;
-  height: 40px;
-  width: 100px;
-  user-select: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-.wrapper .field .btn-2:active{
-  transform: translateY(-50%) scale(0.9);
-}
-.wrapper #click{
-  display: none;
-}
 
